# drf-bookstore-api

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: ruff.yml
apps/authors/: admin.py  models.py  serializers.py  urls.py  views.py
apps/authors/migrations/: 0001_initial.py
apps/books/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
apps/books/migrations/: 0001_initial.py  0002_book_author.py
apps/common/: views.py
apps/users/migrations/: 0001_initial.py
bookstore/: config.py  settings.py  test_settings.py  urls.py
tests/: conftest.py
tests/authors/: test_author_api.py
tests/books/: test_book_api.py
