[project]
name = "drf-bookstore-api"
version = "0.0.1"
description = "Bookstore API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "djangorestframework>=3.16.1",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]

[tool.ruff]
exclude = [
    "**/migrations/**"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "D100",
    "D101",
    "D103",
    "D104",
    "D106",
    "D203",
    "D212",
    "TRY003",
    "EM101",
    "COM812",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"manage.py" = ["PLC0415", "TRY003", "EM101"]
"tests.py" = ["S101"]
"tests/**" = ["S101"]
